syntax = "proto3";

option csharp_namespace = "BlazingPizza.DeliveryService";

package delivery;

service DeliveryService {
  rpc TrackDelivery (SpecialRequest) returns (DeliveryReply);
}

message DeliveryRequest {
}

message DeliveryReply {
}